2014-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (default_payload.elf): Add modules
	multiboot cbmemc linux16 gzio echo help.

2014-01-18  Mike Gilbert <floppym@gentoo.org>

	* Makefile.util.def: Link grub-ofpathname with zfs libs.

2014-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/macbless.c: Rename FILE and DIR to avoid
	conflicts.

	Reported by: Andrey Borzenkov.

2014-01-18  Andrey Borzenkov <arvidjaar@gmail.com>

	* include/grub/misc.h: Move macros for compiler features to ...
	* include/grub/compiler.h: ... new file.
	* include/grub/list.h: Include <grub/compiler.h> instead of <grub/misc.h>.
	* grub-core/commands/fileXX.c: Include <grub/misc.h>.
	* grub-core/efiemu/prepare.c: Include <grub/misc.h>.
	* grub-core/loader/i386/xen_file.c: Include <grub/misc.h>.
	* grub-core/loader/i386/xen_fileXX.c: Include <grub/misc.h>.
	* grub-core/video/capture.c: Include <grub/misc.h>.
	* include/grub/command.h: Include <grub/misc.h>.
	* include/grub/dl.h: Include <grub/misc.h>.
	* include/grub/procfs.h: Include <grub/misc.h>.

2014-01-18  Andrey Borzenkov <arvidjaar@gmail.com>

	* configure.ac: Add support for BUILD_EXEEXT and use it ...
	* Makefile.am: ... here.
	* Makefile.util.def: ... and here.
	* grub-core/Makefile.am: ... and here.

2014-01-18  Andrey Borzenkov <arvidjaar@gmail.com>

	* include/grub/osdep/hostfile_windows.h: Use _W64 instead of
	FILE_OFFSET_BITS to differentiate between native MinGW and Mingw W64.

2014-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c: Recognize keys F1-F12.

2014-01-18  Andrey Borzenkov <arvidjaar@gmail.com>

	* configure.ac: Add support for BUILD_LDFLAGS.
	* Makefile.am: Use BUILD_LDFLAGS for build time programs here ...
	* grub-core/Makefile.am: ... and here.
	* INSTALL: Mention BUILD_LDFLAGS.

2014-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mount.c: Extend GCC warning workaround to grub-mount.
