@@ -1,3 +1,8 @@
+2014-01-18  Andrey Borzenkov <arvidjaar@gmail.com>
+
+	* acinclude.m4 (grub_CHECK_LINK_DIR): Check that we can also remove
+	symbolic link to directory. It fails in Msys shell on Windows 2003.
+
 2014-01-18  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* Makefile.am (default_payload.elf): Add modules
